feat: 게시글 작성 화면 구성 (#40)

--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -69,7 +69,12 @@
   </ul>
 
   <br>
-  <a class="btn btn-secondary" href="/" role="button">Back</a>
+  <section id="button-section">
+    <a class="btn btn-secondary" href="/" role="button">Back</a>
+    <script id="template-post-write-button" type="text/template">
+      <a class="btn btn-primary" href="/page/post/write" role="button">Write</a>
+    </script>
+  </section>
 </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
