--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -64,6 +64,12 @@
       <li class="page-item"><a id="next" class="page-link">Next</a></li>
     </script>
   </ul>
+
+  <section id="button-section">
+    <script id="template-post-write-button" type="text/template">
+      <a class="btn btn-primary" href="/page/post/write" role="button">Write</a>
+    </script>
+  </section>
 </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
