--- a/src/main/resources/templates/post-write.html
+++ b/src/main/resources/templates/post-write.html
@@ -34,8 +34,8 @@
         <label for="content">Content</label>
         <textarea class="form-control" id="content" name="content" placeholder="내용을 입력하세요." required style="height: 400px;"></textarea>
       </div>
-      <a id="submit-button" class="btn btn-primary">Write</a>
       <a class="btn btn-secondary" href="/" role="button">Cancel</a>
+      <a id="submit-button" class="btn btn-primary">Submit</a>
     </form>
   </div>
 </div>
