--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -46,7 +46,7 @@
     </tbody>
 
     <script id="template-comment-row-template" type="text/template">
-      <tr id="{comment-id}">
+      <tr id="{comment-id}" class="comment-row">
         <td>{author}</td>
         <td>{content}</td>
         <td>{created}</td>
@@ -54,7 +54,7 @@
     </script>
   </table>
 
-  <ul id="page-navigator" class="pagination">
+  <ul id="page-navigator" class="pagination justify-content-center">
     <script id="template-prev-button" type="text/template">
       <li class="page-item"><a id="prev" class="page-link">Prev</a></li>
     </script>
@@ -67,12 +67,27 @@
       <li class="page-item"><a id="next" class="page-link">Next</a></li>
     </script>
   </ul>
+  <section id="comment-form">
+    <script id="template-comment-form" type="text/template">
+      <div class="col-md-12">
+        <form id="form">
+          <div class="form-group">
+            <label for="comment">Comment</label>
+            <textarea class="form-control" id="comment" name="content" placeholder="내용을 입력하세요."
+                      required style="height: 100px;"></textarea>
+          </div>
+          <input class="btn btn-secondary" type="reset" role="button" value="Clear">
+          <a id="submit-button" class="btn btn-primary">Submit</a>
+        </form>
+      </div>
+    </script>
+  </section>
 
   <br>
   <section id="button-section">
     <a class="btn btn-secondary" href="/" role="button">Back</a>
     <script id="template-post-write-button" type="text/template">
-      <a class="btn btn-primary" href="/page/post/write" role="button">Write</a>
+      <a class="btn btn-primary" href="/page/post/write" role="button">Write Post</a>
     </script>
   </section>
 </div>
