--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -41,20 +41,36 @@
     <br>
   </div>
 
-  <table class="table table-hover table-bordered">
-    <tbody id="tbody">
-    </tbody>
-
+  <ul id="comment-board" class="list-group-horizontal-md">
     <script id="template-comment-row-template" type="text/template">
-      <tr id="{comment-id}">
-        <td>{author}</td>
-        <td>{content}</td>
-        <td>{created}</td>
-      </tr>
+      <li id="{comment-id}" class="media mt-4">
+        <!--      <img src="추후 작성자 사진 넣기" class="mr-3" alt="avata">-->
+        <div class="media-body">
+          <h5 class="mt-0 mb-1">{author}
+            <small>
+              {created}
+            </small>
+            <small>
+              <a href="#" class="comment-reply-btn" data-toggle="collapse"
+                 data-target=".multi-collapse-reply-{comment-id}">답글 쓰기</a>
+            </small>
+          </h5>
+          <p class="collapse multi-collapse-{comment-id} show">{content}</p>
+          <form class="collapse multi-collapse-reply-{comment-id}">
+            <div class="form-group">
+              <textarea class="form-control" id="comment-content" rows="3"></textarea>
+            </div>
+            <input type="hidden" id="comment-id" value="{comment-id}">
+            <input type="hidden" id="comment-author" value="{author}">
+            <input class="btn btn-info comment-clear-btn" type="reset" role="button" value="취소">
+            <button type="button" class="btn btn-info comment-reply-btn">등록</button>
+          </form>
+        </div>
+      </li>
     </script>
-  </table>
+  </ul>
 
-  <ul id="page-navigator" class="pagination">
+  <ul id="page-navigator" class="pagination justify-content-center">
     <script id="template-prev-button" type="text/template">
       <li class="page-item"><a id="prev" class="page-link">Prev</a></li>
     </script>
@@ -67,12 +83,27 @@
       <li class="page-item"><a id="next" class="page-link">Next</a></li>
     </script>
   </ul>
+  <section id="comment-form">
+    <script id="template-comment-form" type="text/template">
+      <div class="col-md-12">
+        <form id="form">
+          <div class="form-group">
+            <label for="comment">Comment</label>
+            <textarea class="form-control" id="comment" name="content" placeholder="내용을 입력하세요."
+                      required style="height: 100px;"></textarea>
+          </div>
+          <input class="btn btn-secondary" type="reset" role="button" value="Clear">
+          <a id="submit-button" class="btn btn-primary">Submit</a>
+        </form>
+      </div>
+    </script>
+  </section>
 
   <br>
   <section id="button-section">
     <a class="btn btn-secondary" href="/" role="button">Back</a>
     <script id="template-post-write-button" type="text/template">
-      <a class="btn btn-primary" href="/page/post/write" role="button">Write</a>
+      <a class="btn btn-primary" href="/page/post/write" role="button">Write Post</a>
     </script>
   </section>
 </div>
