feat: 복수개의 이미지 첨부 업로드 기능 구현 (#49)

--- a/backend/src/main/resources/templates/index.html
+++ b/backend/src/main/resources/templates/index.html
@@ -67,7 +67,7 @@
 
   <section id="button-section">
     <script id="template-post-write-button" type="text/template">
-      <a class="btn btn-primary" href="/page/post/write" role="button">Write Post</a>
+      <a class="btn btn-primary" href="/page/post/write" role="button">Write</a>
     </script>
   </section>
 </div>
