--- a/backend/src/main/resources/templates/post-write.html
+++ b/backend/src/main/resources/templates/post-write.html
@@ -34,6 +34,9 @@
         <label for="content">Content</label>
         <textarea class="form-control" id="content" name="content" placeholder="내용을 입력하세요." required style="height: 400px;"></textarea>
       </div>
+      <div class="form-group">
+        <input id="images" type="file" multiple="multiple" accept="image/*">
+      </div>
       <a class="btn btn-secondary" href="/" role="button">Cancel</a>
       <a id="submit-button" class="btn btn-primary">Submit</a>
     </form>
