feat: 게시물 삭제 버튼 활성화 (#62)

--- a/backend/src/main/resources/templates/post.html
+++ b/backend/src/main/resources/templates/post.html
@@ -130,6 +130,9 @@
     <script id="template-post-edit-button" type="text/template">
       <a class="btn btn-warning" href="/page/post/edit" role="button">Edit</a>
     </script>
+    <script id="template-post-delete-button" type="text/template">
+      <a id="delete-submit-btn" class="btn btn-danger" href="#" role="button">Delete</a>
+    </script>
   </section>
 </div>
 </body>
