feat: 회원 탈퇴 프론트 기능 구현 (#65)

--- a/backend/src/main/resources/templates/index.html
+++ b/backend/src/main/resources/templates/index.html
@@ -20,8 +20,9 @@
       <a id="user-name">ID : {userName}</a>
     </script>
 
-    <script id="template-logout" type="text/template">
+    <script id="template-logout-withdraw" type="text/template">
       <a id="logout-box" class="btn btn-warning" role="button">Logout</a>
+      <a id="withdraw-box" class="btn btn-danger" role="button">회원탈퇴</a>
     </script>
   </section>
 
