feat: 게시글 수정 기능 구현

--- a/backend/src/main/resources/templates/post.html
+++ b/backend/src/main/resources/templates/post.html
@@ -129,7 +129,7 @@
       <a class="btn btn-primary" href="/page/post/write" role="button">Write</a>
     </script>
     <script id="template-post-edit-button" type="text/template">
-      <a class="btn btn-warning" href="/page/post/edit" role="button">Edit</a>
+      <a id="edit-submit-btn" class="btn btn-warning">Edit</a>
     </script>
     <script id="template-post-delete-button" type="text/template">
       <a id="delete-submit-btn" class="btn btn-danger" href="#" role="button">Delete</a>
